Commit token